--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@heroicons/react": "^2.1.5",
         "daisyui": "^4.12.10",
+        "dayjs": "^1.11.13",
         "emoji-picker-react": "^4.11.1",
         "react-markdown": "^9.0.1",
         "uuid": "^10.0.0"
