--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@headlessui/react": "^2.1.2",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/uuid": "^10.0.0",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
